--- a/style.css
+++ b/style.css
@@ -136,7 +136,65 @@ body {
   margin: 0 10px 0 10px;
 }
 
-.mySlides {display: none}
+.headButtons:hover {
+  text-shadow: #fff 0 0 15px;
+  color: white;
+}
+
+.activityList {
+  flex-direction: column;
+  position: relative;
+  right: 0%;
+  height: 100%;
+  width: 420px;
+  overflow-y: scroll;
+  display: flex;
+  align-items: center;
+  /* justify-content: center; */
+}
+
+.ALCont:hover {
+  /* transform: translateY(-4px); */
+  text-shadow: #fff 0 0 15px;
+  border: 1px solid #555;
+}
+
+.ALBlock:hover {
+  color:white;
+}
+
+.ALCont:active {
+  /* transform: translateY(-1px); */
+}
+
+.ALCont {
+  position: relative;
+  width: 400px;
+  height: 300px;
+  background-color: #0d2330;
+  margin: 0;
+  display: flex;
+  text-align: center;
+  /* border-radius: 20px; */
+}
+
+.ALBlock {
+  margin: 40px;
+  font-size: 17px;
+}
+
+.activCont {
+  display: flex;
+  position: relative;
+  flex-direction: row;
+  justify-content: flex-end;
+  height: 100%;
+  width: 100%;
+}
+
+.mySlides {
+  display: none;
+}
 
 .imgCont {
   height: auto;
@@ -147,9 +205,7 @@ body {
 }
 
 .img {
-  display: block;
-  margin: 10px;
-  height: 100%;
+  height: 500px;
 }
 
 .text {
@@ -167,8 +223,8 @@ body {
 .slideshow-container {
   position: relative;
   background-color: white;
-  margin: auto;
-  height: 85vh;
+  width: inherit;
+  height: inherit;
 }
 
 .slideshow-container a{
@@ -206,7 +262,7 @@ body {
 .dotCont {
   width: 400px;
   position: fixed;
-  bottom: 0px;
+  bottom: 10vh;
   text-align: center;
   left: 50%;
   margin-left: -200px;
@@ -236,56 +292,6 @@ body {
   animation-duration: 1.5s;
 }
 */
-
-.headButtons:hover {
-  text-shadow: #fff 0 0 15px;
-  color: white;
-}
-
-.activityList {
-  flex-direction: column;
-  position: absolute;
-  right: 0%;
-  height: 100%;
-  width: 500px;
-  overflow-y: scroll;
-  display: flex;
-  align-items: center;
-  /* justify-content: center; */
-}
-
-.ALCont:hover {
-  transform: translateY(-4px);
-  text-shadow: #fff 0 0 15px;
-}
-
-.ALBlock:hover {
-  color:white;
-}
-
-.ALCont:active {
-  transform: translateY(-1px);
-}
-
-.ALCont {
-  position: relative;
-  width: 400px;
-  height: 300px;
-  background-color: #0d2330;
-  margin: 20px;
-  display: flex;
-  text-align: center;
-  border-radius: 20px;
-}
-
-.ALBlock {
-  margin: 40px;
-  font-size: 17px;
-}
-
-
-
-
 
 
 
