--- a/style.css
+++ b/style.css
@@ -170,13 +170,13 @@ body {
   background-color: #0d2330;
   margin: 20px;
   display: flex;
-  text-align: center;
-  align-items: center;
+  text-align: left;
+  /* align-items: center; */
   border-radius: 10px;
 }
 
 .ALBlock {
-  margin: 40px;
+  margin: 30px 30px auto 30px;
   font-size: 17px;
 }
 
