--- a/style.css
+++ b/style.css
@@ -10,11 +10,12 @@ body {
   font-family: "Lato", sans-serif;
   font-weight: 400;
   line-height: 1.7;
+  height: 100%;
 
 }
 
 .header {
-  height: 10vh;
+  height: 100px;
   /* background-color: rgb(0,127,255); */
   background-color: #0d2330;
   background-size: cover;
@@ -37,7 +38,7 @@ body {
 .logo {
   position: relative;
   margin:  7px 0 7px 100px;
-  width: 7vh;
+  height: 80px;
 }
 
 .header-primary {
